updated RMD file

--- a/16_20.Rmd
+++ b/16_20.Rmd
@@ -54,6 +54,7 @@ ggplot(township)+
   annotation_scale()
 ```
 ```{r}
+township <- township %>%
+  mutate(num_weibo = lengths(st_covers(township, weibo)))
+```
 
-  
-  
